--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libft_submodulo"]
-	path = libft_submodulo
-	url = https://github.com/GuilleMira/libft_submodulo.git
+[submodule "libft_submodule"]
+	path = libft_submodule
+	url = https://github.com/GuilleMira/libft_submodule.git
